test/spec_vectors/conversions/fail/module_7.wat
(module (func (result i64) (i64.extend_i32_s (f32.const 0))))